k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 3000
  type: ClusterIP
